added xres, dunst, global var file and modified bspwm, kitty, picom, polybar, sxhkdrc and monitor script

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode Nerd Font
+font_family      FiraCode Nerd Font Medium
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -20,9 +20,9 @@ font_family      FiraCode Nerd Font
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
 #:     font_family      Operator Mono Book
-#:     bold_font        Operator Mono Medium
-italic_font      Operator Mono Book Italic
-bold_italic_font Operator Mono Medium Italic
+bold_font        Operator Mono Medium Italic
+#;italic_font      Operator Mono Italic
+bold_italic_font Operator Mono Bold Italic
 
 font_size 14.0
 
@@ -806,7 +806,7 @@ resize_in_steps yes
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -821,7 +821,7 @@ resize_in_steps yes
 #: the second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+tab_bar_style separator
 
 #: The tab bar style, can be one of:
 
@@ -847,12 +847,12 @@ resize_in_steps yes
 #:     action which presents you with a list of tabs and allows for easy
 #:     switching to a tab.
 
-# tab_bar_align left
+tab_bar_align left
 
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, or right.
 
-# tab_bar_min_tabs 2
+# tab_bar_min_tabs 1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown
@@ -874,7 +874,7 @@ resize_in_steps yes
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-# tab_separator " ┇"
+# tab_separator "┇"
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
@@ -885,14 +885,14 @@ resize_in_steps yes
 #: using powerline as the tab_bar_style, can be one of: angled,
 #: slanted, or round.
 
-# tab_activity_symbol none
+# tab_activity_symbol "$ "
 
 #: Some text or a unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes. See
 #: tab_title_template for how this is rendered.
 
-# tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+tab_title_template " {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title} "
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
@@ -942,7 +942,7 @@ resize_in_steps yes
 
 #: Color scheme {{{
 
-# foreground #dddddd
+# foreground #ffffff
 # background #000000
 
 #: The foreground and background colors
@@ -1021,42 +1021,58 @@ resize_in_steps yes
 #: remaining 240 colors as color16 to color255.
 
 # color0 #000000
+color0 #4e4e4e
 # color8 #767676
+color8 #7c7c7c
 
 #: black
 
 # color1 #cc0403
+color1 #ff6c60
 # color9 #f2201f
+color9 #ffb6b0
 
 #: red
 
 # color2  #19cb00
+color2  #a8ff60
 # color10 #23fd00
+color10 #ceffac
 
 #: green
 
 # color3  #cecb00
+color3  #ffffb6
 # color11 #fffd00
+color11 #ffffcb
 
 #: yellow
 
 # color4  #0d73cc
+color4  #69cbfe
 # color12 #1a8fff
+color12 #b5dcfe
 
 #: blue
 
 # color5  #cb1ed1
+color5  #ff73fd
 # color13 #fd28ff
+color13 #ff9cfe
 
 #: magenta
 
 # color6  #0dcdcd
+color6  #c6c5fe
 # color14 #14ffff
+color14 #dfdffe
 
 #: cyan
 
 # color7  #dddddd
+color7  #eeeeee
 # color15 #ffffff
+color15 #ffffff
 
 #: white
 
