--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -12,18 +12,18 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 10;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -10;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -10;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -135,6 +135,10 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 opacity-rule = [
     "75:class_g = 'kitty'",
+    "75:class_g = 'URxvt'",
+    #"80:class_g = 'jetbrains-phpstorm'",
+    #"80:class_g = 'Mattermost'",
+    #"80:class_g = 'Code - Insiders'",
     #"90:class_g = 'discord'"
 ]
 
