--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -19,18 +19,18 @@
 [colors]
 background = #00282A2E
 background-alt = #373B41
-foreground = #a1cdf7
-primary = #ffffff
-secondary = #6d8091
-alert = #A54242
-disabled = #5e7991
+foreground = ${env:COLOR_PRIMARY:}
+primary = ${env:COLOR_SECONDARY:}
+secondary = ${env:COLOR_PRIMARY:}
+alert = ${env:COLOR_ALERT:}
+disabled = ${env:COLOR_PRIMARY_INACTIVE:}
 
 [bar/base]
 monitor = ${env:MONITOR:}
 
 width = 100%
 height = 24pt
-radius = 6
+radius = 0
 
 ; dpi = 96
 
@@ -39,8 +39,8 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 13pt
-border-bottom-size = 0pt
+border-size = ${env:UI_GAPS:}
+border-bottom-size = 0px
 border-color = #00000000
 
 padding-left = 0
@@ -51,8 +51,10 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = Operator Mono:style=Bold:size=16;3
-font-1 = KokuryuOtf:size=16;3
+#font-0 = Operator Mono:style=Bold:size=16;3
+font-0 = Noto Sans Mono:style=Bold:size=15;3
+font-1 = Noto Sans JP:style=black;3
+#font-1 = KokuryuOtf:size=16;3
 font-2 = Font Awesome 6 Free Solid;3
 font-3 = Font Awesome 6 Free Regular;3
 font-4 = Font Awesome 6 Brands Regular;3
@@ -86,8 +88,9 @@ type = internal/xworkspaces
 pin-workspaces = true
 
 label-active = %name%
-label-active-foreground = ${colors.primary}
-#label-active-background = ${colors.background-alt}
+#label-active-foreground = ${colors.primary}
+label-active-foreground = #000000
+label-active-background = ${colors.secondary}
 #label-active-underline= ${colors.primary}
 label-active-padding = 1
 
@@ -112,7 +115,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#a1cdf7}%mountpoint%%{F-} %percentage_used%%
+label-mounted = ${env:POLY_MOUNT_STRING:}
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -170,14 +173,14 @@ label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#a1cdf7} %{F-}%downspeed% %{F#a1cdf7} %{F-}%upspeed%
+label-connected = ${env:POLY_NETWORK_STRING}
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %H:%M:%S %d/%m/%Y
+date = ${env:POLY_DATE_STRING:}
+date-alt = ${env:POLY_DATE_ALT_STRING:}
 
 label = %date%
 label-foreground = ${colors.primary}
