Added alacritty / Updated picom, vars and aliases

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,4 +1,44 @@
 #################################
+#          Animations           #
+#################################
+# requires https://github.com/jonaburg/picom
+# (These are also the default values)
+transition-length = 200
+transition-pow-x = 1.00
+transition-pow-y = 1.00
+transition-pow-w = 1.0
+transition-pow-h = 1.0
+size-transition = true
+spawn-center-screen = true
+spawn-center = false
+no-scale-down = true
+
+
+#################################
+#             Corners           #
+#################################
+# requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
+corner-radius = 10.0;
+rounded-corners-exclude = [
+  #"window_type = 'normal'",
+  #"class_g = 'awesome'",
+  #"class_g = 'URxvt'",
+  #"class_g = 'XTerm'",
+  #"class_g = 'kitty'",
+  #"class_g = 'Alacritty'",
+  "class_g = 'Polybar'",
+  #"class_g = 'code-oss'",
+  #"class_g = 'TelegramDesktop'",
+  #"class_g = 'firefox'",
+  #"class_g = 'Thunderbird'"
+];
+round-borders = 1;
+#round-borders-exclude = [
+  #"class_g = 'TelegramDesktop'",
+#];
+
+
+#################################
 #             Shadows           #
 #################################
 
@@ -136,6 +176,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [
     "75:class_g = 'kitty'",
     "75:class_g = 'URxvt'",
+    "92:class_g = 'Alacritty'",
     #"80:class_g = 'jetbrains-phpstorm'",
     #"80:class_g = 'Mattermost'",
     #"80:class_g = 'Code - Insiders'",
@@ -150,13 +191,13 @@ opacity-rule = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0
+#corner-radius = 0
 
 # Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
-];
+#rounded-corners-exclude = [
+#  "window_type = 'dock'",
+#  "window_type = 'desktop'"
+#];
 
 
 #################################
