--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -4,13 +4,13 @@
 # requires https://github.com/jonaburg/picom
 # (These are also the default values)
 transition-length = 200
-transition-pow-x = 1.00
-transition-pow-y = 1.00
-transition-pow-w = 1.0
-transition-pow-h = 1.0
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
 size-transition = true
-spawn-center-screen = true
-spawn-center = false
+spawn-center-screen = false
+spawn-center = true
 no-scale-down = true
 
 
