--- a/neofetch/mini.conf
+++ b/neofetch/mini.conf
@@ -1,47 +1,46 @@
+# https://github.com/chick2d/neofetch-themes
+# Took from Axyl-OS (https://github.com/axyl-os)
+
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    #info title
-    #info underline
+    info title
+    info underline
 
-    info "host" title
-    info "\tcpu" cpu
-    info "\tgpu" gpu
-    #info "\tGPU Driver" gpu_driver  # Linux/macOS only
-    #info "\tresolution" resolution
-    info "\tmemory" memory
-    #info "\tMotherboard" model
+    info "\e[31m " distro
+    #info "Host" model
+    #info "Kernel" kernel
+    #info "Uptime" uptime
+    #prin "\e[33m " $(cat /proc/1/comm)
+    #info "\e[32m " packages
+    #info "Resolution" resolution
+    #info "DE" de
+    info "\e[34m " wm
+    #info "\e[32m " wm
+    #info "\e[32m " resolution
+    #info "Theme" theme
+    #info "Icons" icons
+    #info "Font" font
+    #info "GPU" gpu
+    info "\e[35m " term
+    info "\e[36m " shell
+    #info "\e[34m " shell
+    #info "\e[35m " memory
+    info "\e[33m " uptime
 
-    prin
-
-    info "os" distro
-    info "\tkernel" kernel
-    #info "\tPackages" packages
-    info "\tuptime" uptime
-
-    prin
-    
-    info "wm" wm
-    info "shell" shell
-    info "terminal" term
-
-    #info "Terminal Font" term_font
-    # info "DE" de
-    # info "WM Theme" wm_theme
-    # info "Theme" theme
-    # info "Icons" icons
+    # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
     # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
+    #info "Font" font
+    #info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
 
-    info cols
+    #info cols
 }
 
 # Title
@@ -80,7 +79,7 @@ kernel_shorthand="on"
 # Values:   'on', 'tiny', 'off'
 # Flag:     --distro_shorthand
 # Supports: Everything except Windows and Haiku
-distro_shorthand="on"
+distro_shorthand="tiny"
 
 # Show/Hide OS Architecture.
 # Show 'x86_64', 'x86' and etc in 'Distro:' output.
@@ -135,7 +134,7 @@ memory_percent="off"
 # kib  '1020928KiB / 7117824KiB'
 # mib  '1042MiB / 6951MiB'
 # gib: ' 0.98GiB / 6.79GiB'
-memory_unit="gib"
+memory_unit="mib"
 
 
 # Packages
@@ -177,7 +176,7 @@ shell_path="off"
 # Example:
 # on:  'bash 4.4.5'
 # off: 'bash'
-shell_version="off"
+shell_version="on"
 
 
 # CPU
@@ -239,7 +238,7 @@ cpu_speed="on"
 # logical:  'Intel i7-6500U (4) @ 3.1GHz' (All virtual cores)
 # physical: 'Intel i7-6500U (2) @ 3.1GHz' (All physical cores)
 # off:      'Intel i7-6500U @ 3.1GHz'
-cpu_cores="logical"
+cpu_cores="off"
 
 # CPU Temperature
 # Hide/Show CPU temperature.
@@ -271,7 +270,7 @@ cpu_temp="off"
 # Example:
 # on:  'AMD HD 7950'
 # off: 'HD 7950'
-gpu_brand="off"
+gpu_brand="on"
 
 # Which GPU to display
 #
@@ -310,7 +309,6 @@ refresh_rate="off"
 
 # Gtk Theme / Icons / Font
 
-
 # Shorten output of GTK Theme / Icons / Font
 #
 # Default: 'off'
@@ -320,7 +318,7 @@ refresh_rate="off"
 # Example:
 # on:  'Numix, Adwaita'
 # off: 'Numix [GTK2], Adwaita [GTK3]'
-gtk_shorthand="off"
+gtk_shorthand="on"
 
 
 # Enable/Disable gtk2 Theme / Icons / Font
@@ -485,7 +483,7 @@ disk_percent="on"
 # xmms2d
 # xnoise
 # yarock
-music_player="auto"
+music_player="cmus"
 
 # Format to display song information.
 #
@@ -496,6 +494,7 @@ music_player="auto"
 # Example:
 # default: 'Song: Jet - Get Born - Sgt Major'
 song_format="%artist% - %album% - %title%"
+# song_format="%artist% - %album% - %title%"
 
 # Print the Artist, Album and Title on separate lines
 #
@@ -509,7 +508,7 @@ song_format="%artist% - %album% - %title%"
 #      'Song: Chelsea Dagger'
 #
 # off: 'Song: The Fratellis - Costello Music - Chelsea Dagger'
-song_shorthand="off"
+song_shorthand="on"
 
 # 'mpc' arguments (specify a host, password etc).
 #
@@ -533,6 +532,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
+# colors=(4 7 7 4 7 7)
 colors=(distro)
 
 
@@ -558,7 +558,7 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="-"
+underline_char="─"
 
 
 # Info Separator
@@ -570,7 +570,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator="‎"
+separator=" "
 
 
 # Color Blocks
@@ -590,7 +590,7 @@ separator="‎"
 #
 # Display colors 0-15 in the blocks. (16 colors)
 # neofetch --block_range 0 15
-block_range=(0 15)
+block_range=(0 7)
 
 # Toggle color blocks
 #
@@ -715,7 +715,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-#image_source="/home/thomas/avatar.png"
+#image_source="/home/angelo_f/.config/neofetch/voidlogo2.txt"
 
 
 # Ascii Options
@@ -767,7 +767,7 @@ image_backend="ascii"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="auto"
+ascii_distro="arch_small"
 
 # Ascii Colors
 #
@@ -777,8 +777,8 @@ ascii_distro="auto"
 #
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
-ascii_colors=(6 14) # - Ascii is colored using these colors.
-#ascii_colors=(distro)
+# ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
+ascii_colors=(7 6)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
@@ -786,7 +786,8 @@ ascii_colors=(6 14) # - Ascii is colored using these colors.
 # Default: 'on'
 # Values:  'on', 'off'
 # Flag:    --ascii_bold
-ascii_bold="on"
+ascii_bold="off"
+
 
 
 # Image Options
@@ -833,14 +834,14 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="360px"
+image_size="auto"
 
 # Gap between image and text
 #
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=1
+gap=3
 
 # Image offsets
 # Only works with the w3m backend.
