Update gitignore, alacritty, bspwm and autostart

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -435,6 +435,10 @@ cursor:
 #   - (Windows) powershell
 shell:
   program: /bin/fish
+  args:
+    - -l
+    - -c
+    - "tmux attach || tmux"
 #  args:
 #    - --login
 
